# Network_Agent

./: .gitignore  PUSH_TEST.txt  README.md  pyproject.toml
logs/test_logs/case1/: raw_log.jsonl
logs/test_logs/case10/: raw_log.jsonl
logs/test_logs/case11/: processed_logs.json  raw_log.jsonl
logs/test_logs/case12/: processed_logs.json  raw_log.jsonl
logs/test_logs/case2/: processed_logs.json
logs/test_logs/case3/: raw_log.jsonl
logs/test_logs/case4/: raw_log.jsonl
logs/test_logs/case5/: processed_logs.json  raw_log.jsonl
logs/test_logs/case6/: processed_logs.json  raw_log.jsonl
logs/test_logs/case7/: processed_logs.json  raw_log.jsonl
logs/test_logs/case8/: processed_logs.json  raw_log.jsonl
logs/test_logs/case9/: raw_log.jsonl
src/agent/: agent-simple.py  agent.py  agent_trace.jsonl  new_agent.py  process_logs.py
src/agent/monitoring/: compare_state.py  get_quick_state.py
src/agent/nodes/: assess_verify.py  collect_changes.py  diagnose.py  format_network.py  get_info.py  helpers.py  ingestion.py  intent.py  remediation.py  summary.py  verify.py
src/agent/state/: schemas.py  types.py
src/agent/utils/: extract_logs.py  json_logger.py  logger.py  sanitize_message.py
src/mcp/: server.py
src/mcp/tools/: arp_info.py  device_info.py  device_status.py  healt_router.py  health_router.py  interface_router.py  ospf.py  ping.py  rem_acl.py  rem_interface.py  rem_ospf.py  rem_routing.py  router_tools.py  routing.py  topology_router.py  vlan_router.py
src/mcp/utils/: common.py  routers.py
src/mcp_app/: server.py
src/mcp_app/tools/: arp.py  arp_info.py  device_info.py  device_status.py  dhcp.py  health_router.py  (+12 more)
(+227 files in other folders)
